display flex em section para telas com < 1000px

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,12 @@
 
 @media screen and (max-width: 100px) {
   .container > section {
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .container > section > div {
+    flex: 1;
   }
 }
 
