--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,8 @@
 
 @media screen and (max-width: 800px) {
   .container > section {
+    flex: 1;
+
     display: flex;
     flex-direction: column;
   }
